--- a/public/pricing.html
+++ b/public/pricing.html
@@ -78,7 +78,7 @@
               <li class="nav-item px-2"><a class="nav-link fw-medium" aria-current="page" href="index.html">Home</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="pricing.html">Pricing</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="web-development.html">Web Development</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#faq">Faq</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="user-research.html">User Research</a></li>
             </ul>
             <form class="ps-lg-5"><a class="btn btn-primary order-1 order-lg-0" href="#!">Sign Up</a></form>
           </div>
