--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
               </ul>
             </div>
             <div class="col-auto">
-              <p class="my-2"><i class="fas fa-envelope me-3"> </i><span>vctung@outlook.com  </span></p>
+              <p class="my-2 fs--1"><i class="fas fa-envelope me-3"></i><a class="text-900" href="mailto:vctung@outlook.com">vctung@outlook.com </a></p>
             </div>
           </div>
         </div>
@@ -320,46 +320,46 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-sm-12 col-lg-6 mb-4 order-0 order-sm-0"><a class="text-decoration-none" href="#"><img src="assets/img/gallery/footer-logo.png" height="51" alt="" /></a>
-              <p class="text-light my-4"> <i class="fas fa-map-marker-alt me-3"></i><span class="text-light">1500 Treat Ave, Suite 200</span><br />San Francisco, CA 94110</p>
-              <p class="text-light"> <i class="fas fa-envelope me-3"> </i><span class="text-light">vctung@outlook.com</span></p>
-              <p class="text-light"> <i class="fas fa-phone-alt me-3"></i><span class="text-light">1-800-800-2299 (Support)</span></p>
+              <p class="text-light my-4"> <i class="fas fa-map-marker-alt me-3"></i><span class="text-light">1500 Treat Ave, Suite 200  &nbsp;</span><a class="text-light" href="tel:+604-680-9785">+604-680-9785</a><br />San Francisco, CA 94110</p>
+              <p class="text-light"> <i class="fas fa-envelope me-3"> </i><a class="text-light" href="mailto:vctung@outlook.com">vctung@outlook.com </a></p>
+              <p class="text-light"> <i class="fas fa-phone-alt me-3"></i><a class="text-light" href="tel:1-800-800-2299">1-800-800-2299 (Support)</a></p>
             </div>
             <div class="col-6 col-sm-4 col-lg-2 mb-3 order-2 order-sm-1">
               <h5 class="lh-lg fw-bold mb-4 text-light font-sans-serif">Community </h5>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Learners</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Partners</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Developers</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Beta Testers</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Translators</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Blog</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Tech Blog</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Teaching Center</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Learners</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Partners</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Developers</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Beta Testers</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Translators</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Blog</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Tech Blog</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Teaching Center</a></li>
               </ul>
             </div>
             <div class="col-6 col-sm-4 col-lg-2 mb-3 order-3 order-sm-2">
               <h5 class="lh-lg fw-bold text-light mb-4 font-sans-serif">Informations</h5>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">About</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Pricing</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Blog</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Careers</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Contact</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">About</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Pricing</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Blog</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Careers</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Contact</a></li>
               </ul>
             </div>
             <div class="col-6 col-sm-4 col-lg-2 mb-3 order-3 order-sm-2">
               <h5 class="lh-lg fw-bold text-light mb-4 font-sans-serif"> More</h5>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Press</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Investors</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Terms</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Privacy</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Help</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Accessibility</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Contact</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Articles</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Directory</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Affiliates</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Press</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Investors</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Terms</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Privacy</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Help</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Accessibility</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Contact</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Articles</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Directory</a></li>
+                <li class="lh-lg"><a class="text-200" href="#!">Affiliates</a></li>
               </ul>
             </div>
           </div>
