--- a/public/user-research.html
+++ b/public/user-research.html
@@ -157,8 +157,8 @@
       <section class="pt-0">
 
         <div class="container">
-          <div class="row h-100align-items-center">
-            <div class="col-md-6 col-lg-6 h-100">
+          <div class="row h-100 align-items-center">
+            <div class="col-md-5 col-lg-6 h-100">
               <div class="card card-span text-white h-100"><img class="w-100" src="assets/img/gallery/student-feedback.png" alt="..." />
                 <div class="card-body px-xl-5 px-md-3 pt-0 pb-7">
                   <div class="d-flex flex-column align-items-center bg-200" style="margin-top:-2.4rem;">
@@ -168,7 +168,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-12 col-lg-6 h-100">
+            <div class="col-md-7 col-lg-6 h-100">
               <h1 class="my-4">Successful Student<br /><span class="text-primary">Feedback</span></h1>
               <p>Take courses from the world’s best instructors and universities. Courses include recorded auto-graded and peer-reviewed assignments, video lectures, and community discussion forums. When you complete a course, you’ll be eligible to receive a shareable electronic Course Certificate for a small fee.</p>
               <div class="mt-6">
@@ -203,7 +203,7 @@
 
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-6 col-lg-4"><img class="w-100" src="assets/img/gallery/cta.png" width="320" alt="cta" /></div>
+            <div class="col-md-6 col-lg-4 mb-5"><img src="assets/img/gallery/cta.png" width="280" alt="cta" /></div>
             <div class="col-md-6 col-lg-5">
               <h5 class="text-primary font-sans-serif fw-bold">Subscrible now</h5>
               <h1 class="mb-5">Get every single<br />update you will get</h1>
