--- a/public/web-development.html
+++ b/public/web-development.html
@@ -151,105 +151,105 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/design.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/design.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/psychology.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/psychology.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Buddhism and Modern Psychology</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/philosophy.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/philosophy.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Introduction to Philosophy</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/photographs.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/photographs.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Advance on Seeing Through Photographs</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/arguments.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/arguments.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Think Again I: How to Understand Arguments</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/experience-design.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/experience-design.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/user-design.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/user-design.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/critical-thinking.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/critical-thinking.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Introduction to Logic and Critical Thinking</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/art-design.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/art-design.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/user-research.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/user-research.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/photographs.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/photographs.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Advance on Seeing Through Photographs</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/ux.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/ux.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/design.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/design.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/critical-thinking.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/critical-thinking.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Introduction to Logic and Critical Thinking</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/art-design-1.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/art-design-1.png" alt="courses" />
                 <div class="card-body">
                   <h5 class="font-sans-serif fw-bold">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
@@ -272,7 +272,7 @@
 
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-6 col-lg-4"><img class="w-100" src="assets/img/gallery/cta.png" width="320" alt="cta" /></div>
+            <div class="col-md-6 col-lg-4 mb-5"><img src="assets/img/gallery/cta.png" width="280" alt="cta" /></div>
             <div class="col-md-6 col-lg-5">
               <h5 class="text-primary font-sans-serif fw-bold">Subscrible now</h5>
               <h1 class="mb-5">Get every single<br />update you will get</h1>
