--- a/public/index.html
+++ b/public/index.html
@@ -137,65 +137,65 @@
           <div class="row">
             <h1 class="text-center mb-5"> Top Featured Courses</h1>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/design.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/design.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/psychology.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/psychology.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Buddhism and Modern Psychology</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Buddhism and Modern Psychology</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/philosophy.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/philosophy.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Introduction to Philosophy</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Introduction to Philosophy</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/photographs.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/photographs.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Advance on Seeing Through Photographs</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Advance on Seeing Through Photographs</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/arguments.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/arguments.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Think Again I: How to Understand Arguments</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Think Again I: How to Understand Arguments</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/experience-design.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/experience-design.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/user-research.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/user-research.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/critical-thinking.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/critical-thinking.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Introduction to Logic and Critical Thinking</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Introduction to Logic and Critical Thinking</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card h-100"><img src="assets/img/gallery/art-design.png" alt="courses" />
+              <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/art-design.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
@@ -215,8 +215,8 @@
       <section class="pt-0">
 
         <div class="container">
-          <div class="row h-100align-items-center">
-            <div class="col-md-6 col-lg-6 h-100">
+          <div class="row h-100 align-items-center">
+            <div class="col-md-5 col-lg-6 h-100">
               <div class="card card-span text-white h-100"><img class="w-100" src="assets/img/gallery/student-feedback.png" alt="..." />
                 <div class="card-body px-xl-5 px-md-3 pt-0 pb-7">
                   <div class="d-flex flex-column align-items-center bg-200" style="margin-top:-2.4rem;">
@@ -226,7 +226,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-12 col-lg-6 h-100">
+            <div class="col-md-7 col-lg-6 h-100">
               <h1 class="my-4">Successful Student<br /><span class="text-primary">Feedback</span></h1>
               <p>Take courses from the world’s best instructors and universities. Courses include recorded auto-graded and peer-reviewed assignments, video lectures, and community discussion forums. When you complete a course, you’ll be eligible to receive a shareable electronic Course Certificate for a small fee.</p>
               <div class="mt-6">
@@ -260,19 +260,19 @@
 
         <div class="container">
           <div class="row">
-            <div class="col-md-3 text-center"> <img class="w-md-100 w-lg-75" src="assets/img/gallery/published.png" height="180" alt="..." />
+            <div class="col-sm-6 col-md-3 text-center mb-5"><img class="w-md-100 w-lg-75" src="assets/img/gallery/published.png" height="150" alt="..." />
               <h1 class="my-2">768</h1>
               <p class="text-info fw-bold">COURSES PUBLISHED</p>
             </div>
-            <div class="col-md-3 text-center"> <img class="w-md-100 w-lg-75" src="assets/img/gallery/instructors.png" height="180" alt="..." />
+            <div class="col-sm-6 col-md-3 text-center mb-5"><img class="w-md-100 w-lg-75" src="assets/img/gallery/instructors.png" height="150" alt="..." />
               <h1 class="my-2">120</h1>
               <p class="text-info fw-bold">EXPERT INSTRUCTORS</p>
             </div>
-            <div class="col-md-3 text-center"> <img class="w-md-100 w-lg-75" src="assets/img/gallery/learners.png" height="180" alt="..." />
+            <div class="col-sm-6 col-md-3 text-center mb-5"><img class="w-md-100 w-lg-75" src="assets/img/gallery/learners.png" height="150" alt="..." />
               <h1 class="my-2">8300</h1>
               <p class="text-info fw-bold">HAPPY LEARNERS</p>
             </div>
-            <div class="col-md-3 text-center"> <img class="w-md-100 w-lg-75" src="assets/img/gallery/awards.png" height="180" alt="..." />
+            <div class="col-sm-6 col-md-3 text-center mb-5"><img class="w-md-100 w-lg-75" src="assets/img/gallery/awards.png" height="150" alt="..." />
               <h1 class="my-2">32</h1>
               <p class="text-info fw-bold">AWARDS ACHIEVED</p>
             </div>
@@ -287,7 +287,7 @@
 
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-6 col-lg-4"><img class="w-100" src="assets/img/gallery/cta.png" width="320" alt="cta" /></div>
+            <div class="col-md-6 col-lg-4 mb-5"><img src="assets/img/gallery/cta.png" width="280" alt="cta" /></div>
             <div class="col-md-6 col-lg-5">
               <h5 class="text-primary font-sans-serif fw-bold">Subscrible now</h5>
               <h1 class="mb-5">Get every single<br />update you will get</h1>
