--- a/public/web-development.html
+++ b/public/web-development.html
@@ -75,10 +75,10 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-              <li class="nav-item px-2"><a class="nav-link fw-medium" aria-current="page" href="index.html">Home</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="pricing.html">Pricing</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="web-development.html">Web Development</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="user-research.html">User Research</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="pricing.html">Pricing</a></li>
+              <li class="nav-item px-2"><a class="nav-link active" aria-current="page" href="web-development.html">Web Development</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="user-research.html">User Research</a></li>
             </ul>
             <form class="d-flex"><a class="btn btn-primary order-1 order-lg-0" href="#!">Sign Up</a>
               <button class="btn btn-outline-light ms-2" type="submit"><i class="fas fa-search text-800"></i></button>
@@ -153,105 +153,105 @@
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/design.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/psychology.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Buddhism and Modern Psychology</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Buddhism and Modern Psychology</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/philosophy.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Introduction to Philosophy</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Introduction to Philosophy</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/photographs.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Advance on Seeing Through Photographs</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Advance on Seeing Through Photographs</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/arguments.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Think Again I: How to Understand Arguments</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Think Again I: How to Understand Arguments</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/experience-design.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/user-design.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/critical-thinking.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Introduction to Logic and Critical Thinking</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Introduction to Logic and Critical Thinking</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/art-design.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/user-research.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/photographs.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Advance on Seeing Through Photographs</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Advance on Seeing Through Photographs</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/ux.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/design.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">User Research for User Experience Design</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/critical-thinking.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Introduction to Logic and Critical Thinking</h5><a class="text-muted fs--1 stretched-link" href="#!">Duke University</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Introduction to Logic and Critical Thinking</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">Duke University</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="card h-100"><img class="card-img-top w-100" src="assets/img/gallery/art-design-1.png" alt="courses" />
                 <div class="card-body">
-                  <h5 class="font-sans-serif fw-bold">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link" href="#!">The Museum of Modern Art</a>
+                  <h5 class="font-sans-serif fw-bold fs-md-0 fs-lg-1">Modern and Contemporary Art and Design</h5><a class="text-muted fs--1 stretched-link text-decoration-none" href="#!">The Museum of Modern Art</a>
                 </div>
               </div>
             </div>
@@ -279,7 +279,7 @@
               <form class="row g-0 align-items-center">
                 <div class="col">
                   <div class="input-group-icon">
-                    <input class="form-control form-little-squirrel-control" type="email" placeholder="Enter email address" aria-label="email" /><i class="fas fa-envelope input-box-icon"></i>
+                    <input class="form-control form-little-squirrel-control" type="email" placeholder="Enter email " aria-label="email" /><i class="fas fa-envelope input-box-icon"></i>
                   </div>
                 </div>
                 <div class="col-auto">
