--- a/public/pricing.html
+++ b/public/pricing.html
@@ -75,10 +75,10 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-              <li class="nav-item px-2"><a class="nav-link fw-medium" aria-current="page" href="index.html">Home</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="pricing.html">Pricing</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="web-development.html">Web Development</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="user-research.html">User Research</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
+              <li class="nav-item px-2"><a class="nav-link active" aria-current="page" href="pricing.html">Pricing</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="web-development.html">Web Development</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="user-research.html">User Research</a></li>
             </ul>
             <form class="d-flex"><a class="btn btn-primary order-1 order-lg-0" href="#!">Sign Up</a>
               <button class="btn btn-outline-light ms-2" type="submit"><i class="fas fa-search text-800"></i></button>
@@ -187,7 +187,7 @@
               <form class="row g-0 align-items-center">
                 <div class="col">
                   <div class="input-group-icon">
-                    <input class="form-control form-little-squirrel-control" type="email" placeholder="Enter email address" aria-label="email" /><i class="fas fa-envelope input-box-icon"></i>
+                    <input class="form-control form-little-squirrel-control" type="email" placeholder="Enter email " aria-label="email" /><i class="fas fa-envelope input-box-icon"></i>
                   </div>
                 </div>
                 <div class="col-auto">
