--- a/public/user-research.html
+++ b/public/user-research.html
@@ -75,10 +75,10 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-              <li class="nav-item px-2"><a class="nav-link fw-medium" aria-current="page" href="index.html">Home</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="pricing.html">Pricing</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="web-development.html">Web Development</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="user-research.html">User Research</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="pricing.html">Pricing</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="web-development.html">Web Development</a></li>
+              <li class="nav-item px-2"><a class="nav-link active" aria-current="page" href="user-research.html">User Research</a></li>
             </ul>
             <form class="d-flex"><a class="btn btn-primary order-1 order-lg-0" href="#!">Sign Up</a>
               <button class="btn btn-outline-light ms-2" type="submit"><i class="fas fa-search text-800"></i></button>
@@ -158,9 +158,9 @@
 
         <div class="container">
           <div class="row h-100 align-items-center">
-            <div class="col-md-5 col-lg-6 h-100">
+            <div class="col-md-12 col-lg-6 h-100">
               <div class="card card-span text-white h-100"><img class="w-100" src="assets/img/gallery/student-feedback.png" alt="..." />
-                <div class="card-body px-xl-5 px-md-3 pt-0 pb-7">
+                <div class="card-body px-xl-5 px-md-3 pt-0">
                   <div class="d-flex flex-column align-items-center bg-200" style="margin-top:-2.4rem;">
                     <h5 class="mt-3 mb-0">Kimmie Vo</h5>
                     <p class="text-muted">Junior Designer</p>
@@ -168,7 +168,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-7 col-lg-6 h-100">
+            <div class="col-md-12 col-lg-6 h-100">
               <h1 class="my-4">Successful Student<br /><span class="text-primary">Feedback</span></h1>
               <p>Take courses from the world’s best instructors and universities. Courses include recorded auto-graded and peer-reviewed assignments, video lectures, and community discussion forums. When you complete a course, you’ll be eligible to receive a shareable electronic Course Certificate for a small fee.</p>
               <div class="mt-6">
@@ -210,7 +210,7 @@
               <form class="row g-0 align-items-center">
                 <div class="col">
                   <div class="input-group-icon">
-                    <input class="form-control form-little-squirrel-control" type="email" placeholder="Enter email address" aria-label="email" /><i class="fas fa-envelope input-box-icon"></i>
+                    <input class="form-control form-little-squirrel-control" type="email" placeholder="Enter email " aria-label="email" /><i class="fas fa-envelope input-box-icon"></i>
                   </div>
                 </div>
                 <div class="col-auto">
